fixed audo tag id to match 'caseyAudio'

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="window">
         <img id="casey" src="Casey.png" alt="It's casey">
-        <audio id="myAudio" src="CaseySoundnEIo.mp3" preload="auto"></audio>
+        <audio id="caseyAudio" src="CaseySoundnEIo.mp3" preload="auto"></audio>
     </div>
     <script>
         const hoverButton = document.getElementById('casey');
